--- a/css/styles.scss
+++ b/css/styles.scss
@@ -323,7 +323,11 @@ main {
   }
 }
 // ──────────INSTRUCTOR SECTION───────────────────────────────────────────────────────────
+.instructor2{
+  background: linear-gradient(110deg, #1e5799 0%, #658cba 43%,#fff 43%);
+}
   .teacher-section {
+    padding-top: 3rem;
     .row .data-teacher {
       p {
         margin-bottom: 0;
@@ -335,56 +339,15 @@ main {
     .teacher-works {
       .teacher-img-container {
         .img-teacher {
-          width: 350px;
+          // width: 350px;
           height: 350px;
-          border-radius: 50%;
+          // border-radius: 50%;
           object-fit: cover;
         }
       }
       .teacher-items {
         ul {
           list-style: circle;
-        }
-      }
-      .gallery {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-        align-items: center;
-        .gallery-item {
-          width: 40%;
-          height: 300px;
-          margin: 1em;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-          border-radius: $radius;
-          overflow: hidden;
-          cursor: pointer;
-          transition: all .3s;
-          img {
-            object-fit: cover;
-            border-radius: $radius;
-            width: 100%;
-            height: 100%;
-            transition: all .3s;
-          }
-          p {
-            bottom: 3%;
-            left: 3%;
-            opacity: 0;
-            text-align: center;
-            color: $color-off;
-            transition: all .3s;
-          }
-          &:hover {
-            transform: scale(1.03,1.03);
-            background: rgba(0, 0, 0, 0.5);
-            img {
-              filter: brightness(0.3);
-            }
-            p {
-              opacity: 100%;
-            }
-          }
         }
       }
     }
