--- a/css/styles.scss
+++ b/css/styles.scss
@@ -184,6 +184,7 @@ body {
   background-image: linear-gradient(90deg, rgba(30, 87, 153, 1) 0%, rgba(101, 140, 186, 0.6) 100%), url("./img/page-img/img-header.jpg");
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   clip-path: polygon(100% 0, 100% 100%, 0 80%, 0 0);
   color: $color-light;
   .main-nav {
