--- a/css/styles.scss
+++ b/css/styles.scss
@@ -587,6 +587,10 @@ main {
           box-sizing: border-box;
           letter-spacing: 1px;
         }
+        //? Remove border-radius from input forms
+        textarea.form-control {
+          border-radius: 0 !important;
+        }
     
         .input-effect {
           border: 0;
@@ -609,7 +613,6 @@ main {
         }
         textarea#text-content {
           resize: none;
-          // transform: translateY(2px);
         }
         .form-control{
           padding: 0;
@@ -627,14 +630,6 @@ main {
         background-image: linear-gradient(90deg, rgba(30, 87, 153, 0.7) 0%, rgba(101, 140, 186, 0.6) 100%), url("./img/page-img/img-contact.jpg");
         background-size: cover;
         background-position: center;
-    
-        h5 {
-          color: $color-light;
-        }
-    
-        p {
-          color: $color-light;
-        }
       }
     }
   }
