--- a/css/styles.scss
+++ b/css/styles.scss
@@ -358,6 +358,7 @@ main {
 // ──────────INSTRUCTOR SECTION───────────────────────────────────────────────────────────
 .bg-instructor{
   background: linear-gradient(110deg, #1e5799 0%, #658cba 100%);
+  margin-bottom: 6rem;
 } 
 .teacher-section {
   color: $color-light;
