Arreglo de instructor-section y cards responsive

--- a/css/responsive/responsive.scss
+++ b/css/responsive/responsive.scss
@@ -1,4 +1,19 @@
-@media (max-width: 991px) {
+@media (max-width:545px) {
+    .hidro-cards {
+        position: static !important;
+    }
+    #nosotros {
+        padding-top: 6rem !important;
+    }
+}
+
+@media (min-width:546px) and (max-width:990px) {
+    #nosotros {
+        padding-top: 16rem !important;
+    }
+}
+
+@media (max-width:991px) {
     .nav-item > a:hover {
         transform: none !important;
     }
@@ -11,7 +26,6 @@
     }
 
     #nosotros {
-        padding-top: 14rem !important;
         .img-nos-container {
             order: 2;
         }
