--- a/css/responsive/responsive.scss
+++ b/css/responsive/responsive.scss
@@ -4,6 +4,9 @@
     }
     #nosotros {
         padding-top: 6rem !important;
+        .img-nos-container img {
+            width: 320px;
+        }
     }
 }
 
