--- a/css/styles.scss
+++ b/css/styles.scss
@@ -573,6 +573,30 @@ main {
     }
   }
 
+  // ──────────TESTIMONY ALT SECTION───────────────────────────────────────────────────────────
+
+  .testimony-alt-container {
+    .card {
+      width: 300px;
+      height: auto;
+      box-shadow: 0 0px 4px rgba(0, 0, 0, 0.26);
+      transition: all .3s;
+      img {
+        height: 350px;
+        object-fit: cover;
+      }
+      .card-body {
+        transition: all .3s;
+      }
+      &:hover {
+        .card-body {
+          background-image: $light-blue-horizontal;
+          color: $color-light;
+        }
+      }
+    }
+  }
+
   // ──────────CONTACT SECTION───────────────────────────────────────────────────────────
 
   .skew-contact-bg {
