--- a/css/styles.scss
+++ b/css/styles.scss
@@ -362,6 +362,7 @@ main {
 // ──────────INSTRUCTOR SECTION───────────────────────────────────────────────────────────
 .bg-instructor{
   background: linear-gradient(90deg, rgb(0, 109, 175) 0%, rgba(0, 123, 151, 0.93) 100%, rgba(0,170,175,0.28) 100%), url('./img/page-img/pattern.jpg');
+  background-attachment: fixed;
   margin-bottom: 6rem;
 } 
 .teacher-section {
@@ -678,7 +679,6 @@ footer {
   color: $color-light;
   a {
     position: relative;
-    display: inline-block;
     color: $color-off;
     overflow: hidden;
     background: linear-gradient(to right, $color-primary, $color-primary 50%, $color-off 50%);
